# hydralette

./: .pre-commit-config.yaml  404.html  README.md  gen_api_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
API/: index.html
docs/: API.md  examples.md  gen_api_pages.py  index.md
docs/stylesheets/: extra.css
examples/: 01_getting_started.py  02_groups.py  03_existing_dataclass.py  04_references.py  05_conversion_and_validation.py  06_from_signature.py  07_yaml_overrides.py  08_all_in_one.py  index.html
hydralette/: __init__.py  config.py  exceptions.py  field.py  hydralette.py  hydralette_field.py
search/: search_index.json
stylesheets/: extra.css
tests/: basic_test.py  compatibility_test.py  group_test.py  reference_test.py  validation_test.py
