[tool.poetry]
name = "hydralette"
version = "0.1.5"
description = ""
authors = ["ValeKnappich"]
readme = "README.md"
packages = [{include = "hydralette"}]
keywords = ["config", "cfg", "hydra"]
license = "MIT"
homepage = "https://github.com/ValeKnappich/hydralette"
repository = "https://github.com/ValeKnappich/hydralette"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
debugpy = "^1.6.7.post1"
pytest = "^7.4.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.8"
pillow = "^10.0.0"
cairosvg = "^2.7.1"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests/"